--- a/contato.html
+++ b/contato.html
@@ -44,6 +44,43 @@
     <div class="mapa">
     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1877.7650348755324!2d-47.92751055680561!3d-19.732621462848286!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbr!4v1687190476425!5m2!1sen!2sbr" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+
+    <h2>Horários de Serviço</h2>
+  
+    <table>
+      <tr>
+        <th>Dia</th>
+        <th>Horário</th>
+      </tr>
+      <tr>
+        <td>Segunda-feira</td>
+        <td>8:00 - 18:00</td>
+      </tr>
+      <tr>
+        <td>Terça-feira</td>
+        <td>8:00 - 18:00</td>
+      </tr>
+      <tr>
+        <td>Quarta-feira</td>
+        <td>8:00 - 18:00</td>
+      </tr>
+      <tr>
+        <td>Quinta-feira</td>
+        <td>8:00 - 18:00</td>
+      </tr>
+      <tr>
+        <td>Sexta-feira</td>
+        <td>8:00 - 18:00</td>
+      </tr>
+      <tr>
+        <td>Sábado</td>
+        <td>9:00 - 13:00</td>
+      </tr>
+      <tr>
+        <td>Domingo</td>
+        <td>Fechado</td>
+      </tr>
+    </table>
   </main>
 </body>
 
