--- a/contato.html
+++ b/contato.html
@@ -32,10 +32,21 @@
       <div class="mensagem">
         <textarea cols="50" rows="20" placeholder="Digite uma mensagem..."></textarea>
       </div>
+
+      <h3>Escolha a plataforma de resposta:</h3>
+      <div class="select">
+      <select id="forma-contato" name="forma-contato">
+        <option value="whatsapp">WhatsApp</option>
+        <option value="email">E-mail</option>
+        <option value="celular">Celular</option>
+      </select>
+    </div>
+    
+    </form>      
       <div class="botao">
         <input type="submit" value="Enviar" class="button"></submit>
       </div>
-    </form>
+
 
     <div class="mensagem-loc">
     <h2>Nossa localização</h2>
