--- a/servicos.html
+++ b/servicos.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="reset.css">
   <link rel="stylesheet" href="style.css">
-  <title>Página inicial</title>
+  <title>Serviços</title>
 </head>
 
 <body>
